@@ -5,7 +5,8 @@
   enctype="multipart/form-data"
   accept-charset="utf-8"
   i18n:domain="deform"
-  tal:attributes="class field.css_class">
+  tal:attributes="class field.css_class;
+                  autocomplete field.autocomplete">
 
   <fieldset class="deformFormFieldset">
 
